[project]
name = "prac01"
version = "0.1.0"
description = ""
authors = [
    {name = "Neko Asakura",email = "neko.asakura@outlook.com"}
]
license = {text = "LGPL-2.1-only"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
